Convert into WebComponent

--- a/1-expanding-cards/index.html
+++ b/1-expanding-cards/index.html
@@ -7,15 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="list" expand="1">
-            <div class="list-entry"></div>
-            <div class="list-entry"></div>
-            <div class="list-entry"></div>
-            <div class="list-entry"></div>
-            <div class="list-entry"></div>
-        </div>
-    </div>
+    <expanding-cards num-elements="4" expanded-width="50" style="height:40vh; width: 100%; display: block;"></expanding-cards>
+    <expanding-cards num-elements="2" expanded-width="90" style="height:40vh; width: 100%; display: block;"></expanding-cards>
     <script src="index.js"></script>
 </body>
 </html>
