Complete menu transitions and apply all configurable variables

--- a/3-rotating-navigation-animation/index.html
+++ b/3-rotating-navigation-animation/index.html
@@ -12,15 +12,16 @@
         content-selector="section"
         radial-background-color="lightcoral"
         radial-color="white"
-        radial-transition="500"
+        radial-transition="300"
+        radial-radius="100"
         menu-background-color="#333"
         menu-color="white"
     >
         <nav>
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
+            <ul style="list-style:none;">
+                <li style="margin-bottom:1rem;">🏠 Home</li>
+                <li style="margin-bottom:1rem;">❓ About</li>
+                <li style="margin-bottom:1rem;">✉️ Contact</li>
             </ul>
         </nav>
         <section>
