--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <body>
     <h1>50 Projects 50 Days as WebComponents</h1>
     <ol>
-        <li><a href="/1-expanding-cards">Expanding cards</a></li>
-        <li><a href="/2-progress-steps">Progress steps</a></li>
-        <li><a href="/3-rotating-navigation-animation">Rotating navigation animation</a></li>
+        <li><a href="./1-expanding-cards">Expanding cards</a></li>
+        <li><a href="./2-progress-steps">Progress steps</a></li>
+        <li><a href="./3-rotating-navigation-animation">Rotating navigation animation</a></li>
         <!--template-->
     </ol>
 </body>
