[WIP] Added input collapsable

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <li><a href="./1-expanding-cards">Expanding cards</a></li>
         <li><a href="./2-progress-steps">Progress steps</a></li>
         <li><a href="./3-rotating-navigation-animation">Rotating navigation animation</a></li>
-        <!--template-->
+        <li><a href="./4-hidden-search-widget">Hidden search widget</a></li>
+		<!--template-->
     </ol>
 </body>
 </html>
