Added configurable attributes

--- a/4-hidden-search-widget/index.html
+++ b/4-hidden-search-widget/index.html
@@ -9,10 +9,21 @@
 <body>
     <hidden-search-component></hidden-search-component>
     <hidden-search-component
-        size="20px" 
-        max-width="500px" 
-        font-size="20px"
+        max-width="100px" 
+        input-font-size="12px"
         icon-size="20px"
+        input-padding="5px"
+    ></hidden-search-component>
+    <hidden-search-component
+        background-color="purple"
+        icon-size="50px"
+        icon-color="white"
+        icon-padding="5px"
+        input-font-size="24px"
+        input-color="yellow"
+        input-padding="10px"
+        input-background-color="lightcoral"
+        max-width="500px"
     ></hidden-search-component>
     <script src="index.js"></script>
 </body>
