Created component for scroll animation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <li><a href="./2-progress-steps">Progress steps</a></li>
         <li><a href="./3-rotating-navigation-animation">Rotating navigation animation</a></li>
         <li><a href="./4-hidden-search-widget">Hidden search widget</a></li>
-        <li><a href="./5-blurry-loading">Blurry Loading</a></li>
+        <li><a href="./5-blurry-loading">Blurry loading</a></li>
+		<li><a href="./6-scroll-animation">Scroll animation</a></li>
 		<!--template-->
     </ol>
 </body>
