--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="./4-hidden-search-widget">Hidden search widget</a></li>
         <li><a href="./5-blurry-loading">Blurry loading</a></li>
 		<li><a href="./6-scroll-animation">Scroll animation</a></li>
+		<li><a href="./7-split-landing-page">Split landing page</a></li>
 		<!--template-->
     </ol>
 </body>
